# archestra

./: .gitignore  .mcp.json  EXTERNAL_CONTRIBUTORS.md
.devcontainer/: README.md
.github/: kind.yaml  values-ci-vault-k8s.yaml  values-ci.yaml
.github/ISSUE_TEMPLATE/: add-knowledge-connector.md  hr-task.md
.github/release-please/: .release-please-manifest.json
.github/workflows/: auto-assign-reviewers.yml  bounty-bot.yml  build-base-mcp-server-docker-image.yml  build-dockerhub-image.yml  build-native-multi-arch-image.yml  claude-coreteam-mentions-shared.yml  claude-coreteam-mentions.yml  claude-coreteam-review.yml  (+17 more)
desktop/: .gitignore  Cargo.toml  README.md
desktop/src-tauri/: tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: container.rs  lib.rs  logs.rs  main.rs  pods.rs  runtime.rs  state.rs  updater.rs
desktop/ui/: app.js  index.html  package-lock.json  package.json  styles.css  tailwind.config.js  vite.config.ts
desktop/ui/src/: App.tsx  styles.css  types.ts
desktop/ui/src/app/: globals.css  layout.tsx  page.tsx
desktop/ui/src/components/: Button.tsx  DatabaseTab.tsx  HomeTab.tsx  LogsTab.tsx  PodsTab.tsx  SettingsTab.tsx  Sidebar.tsx  StatusCard.tsx  database-tab.tsx  home-tab.tsx  logs-tab.tsx  pods-tab.tsx  settings-tab.tsx  sidebar.tsx  status-card.tsx
desktop/ui/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  select.tsx
desktop/ui/src/hooks/: use-tauri.ts  useTauri.ts
platform/: .env.example  .gitignore  .npmrc  CHANGELOG.md  CLAUDE.md  Dockerfile  package.json  pnpm-lock.yaml
(+417 files in other folders)
